--- a/css/styles.css
+++ b/css/styles.css
@@ -591,7 +591,8 @@ body {
   color: var(--logo-btm-color);
   background-color: var(--fond-btn-color);
   cursor: pointer;
-  transition: border var(--transition), color var(--transition), background var(--transition), box-shadow var(--transition);
+  transition: border var(--transition), color var(--transition),
+    background var(--transition), box-shadow var(--transition);
 }
 
 /* Portfolio-container */
@@ -656,8 +657,12 @@ body {
   height: 100%;
   transform: translate(0, 100%);
   transition: transform 500ms linear;
-  background: #4D5AE5;
-  background: linear-gradient(0deg, rgba(77, 90, 229, 0.7), rgba(77, 90, 229, 0.7));
+  background: #4d5ae5;
+  background: linear-gradient(
+    0deg,
+    rgba(77, 90, 229, 0.7),
+    rgba(77, 90, 229, 0.7)
+  );
   background-blend-mode: soft-light, normal;
   mix-blend-mode: normal;
   color: #f4f4fd;
@@ -678,10 +683,8 @@ body {
 }
 
 .link-a:hover .overlay,
-.link-a:focus .overlay
- {
+.link-a:focus .overlay {
   transform: translate(0, 0);
-
 }
 
 /* modal wind */
@@ -710,36 +713,104 @@ body {
   width: 408px;
   height: 584px;
   border-radius: 4px;
-  background-color: #FCFCFC;
+  padding: 72px 24px 24px 24px;
+  background-color: #fcfcfc;
 }
 
 .modal-close-btn {
   position: absolute;
-    top: 24px;
-    right: 24px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background: #E7E9FC;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    transition: border-color var(--transition);
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: border-color var(--transition);
 }
 
 .modal-close-btn:hover,
 .modal-close-btn:focus {
   background-color: var(--btn-color);
- border-color: var(--btn-color);
+  border-color: var(--btn-color);
 }
 
 .modal-close-btn:hover .modal-close-btn-icon,
 .modal-close-btn:focus .modal-close-btn-icon {
-    fill: var(--fond-btn-color);
+  fill: var(--fond-btn-color);
 }
 
 .modal-close-btn-icon {
   transition: fill var(--transition);
+}
+
+/* modal-form */
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-field {
+  margin-bottom: 8px;
+}
+
+.modal-form-input-wrapper {
+  display: block;
+  position: relative;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid var(--frequent-color);
+  border-radius: 4px;
+  padding-left: 38px;
+  transition: border-color var(--transition);
+}
+
+.modal-form-input-desc {
+  display: block;
+  font-size: 12px;
+  line-height: 1.17;
+  font-weight: 400;
+  margin-bottom: 4px;
+  color: var(--border-link);
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border-color: var(--logo-btm-color);
+}
+
+.modal-form-input-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  display: block;
+  width: 18px;
+  height: 24px;
+  transition: fill var(--transition);
+}
+
+.modal-form-input:focus + .modal-form-input-icon {
+  fill: var(--logo-btm-color);
+}
+
+.modal-form-message {
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
+  resize: none;
+  border-radius: 4px;
+  transition: border-color var(--transition);
+}
+
+.modal-form-message:focus {
+  outline: none;
+  border-color: var(--logo-btm-color);
 }
