--- a/css/styles.css
+++ b/css/styles.css
@@ -802,15 +802,44 @@ body {
 }
 
 .modal-form-message {
+  display: block;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   width: 100%;
-  height: 120px;
+
+  min-height: 120px;
   padding: 8px 16px;
+  margin-bottom: 16px;
   resize: none;
   border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  outline: 1px solid transparent;
   transition: border-color var(--transition);
+  text-transform: #2E2F4266;
+}
+
+.modal-form-message::placeholder {
+  text-transform: uppercase;
 }
 
 .modal-form-message:focus {
   outline: none;
   border-color: var(--logo-btm-color);
+}
+
+.modal-form-check-desc::before {
+  display: block;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  content: "";
+  cursor: pointer;
+}
+
+.modal-form-check:checked + .modal-form-check-desc::before {
+  background-color: var(--btn-color);
+  box-shadow: inset;
+  background-image: url();
 }
