--- a/css/styles.css
+++ b/css/styles.css
@@ -711,7 +711,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 408px;
-  height: 584px;
+  min-height: 584px;
   border-radius: 4px;
   padding: 72px 24px 24px 24px;
   background-color: #fcfcfc;
@@ -764,14 +764,17 @@ body {
 }
 
 .modal-form-input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid var(--frequent-color);
-  border-radius: 4px;
   padding: 0 38px;
-  transition: border-color var(--transition);
+    width: 100%;
+    height: 40px;
+    font-size: 18px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    outline: 1px solid transparent;
+    outline-offset: -2px;
+    color: var(--border-link);
+    transition: outline-color var(--transition);
 }
-
 .modal-form-input-desc {
   display: block;
   font-size: 12px;
@@ -786,12 +789,12 @@ body {
   border-color: var(--logo-btm-color);
 }
 
-.modal-form-input-icon {
+.modal-form-input-icon-vector {
+  display: block;
   position: absolute;
   top: 50%;
   left: 16px;
   transform: translateY(-50%);
-  display: block;
   transition: fill var(--transition);
 }
 
@@ -805,16 +808,16 @@ body {
   line-height: 1.17;
   letter-spacing: 0.04em;
   width: 100%;
-
   min-height: 120px;
   padding: 8px 16px;
   margin-bottom: 16px;
-  resize: none;
-  border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
   outline: 1px solid transparent;
-  transition: border-color var(--transition);
-  text-transform: #2E2F4266;
+  outline-offset: -2px;
+  color: var(--frequent-color);
+  transition: outline-color var(--transition);
+  resize: none;
 }
 
 .modal-form-message::placeholder {
@@ -840,4 +843,34 @@ body {
   background-color: var(--btn-color);
   box-shadow: inset;
   background-image: url();
+}
+
+.modal-form-submit {
+  display: block;
+  margin: auto;
+  min-width: 169px;
+  height: 56px;
+  padding: 16px 32px;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+  background-color: var(--logo-btm-color);
+  color: var(--fond-color);
+  transition: background-color var(--transition);
+}
+
+.modal-text-form {
+  display: block;
+  margin-bottom: 16px;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--frequent-color);
 }
