--- a/css/styles.css
+++ b/css/styles.css
@@ -822,9 +822,7 @@ body {
   resize: none;
 }
 
-.modal-form-message::placeholder {
-  text-transform: uppercase;
-}
+
 
 .modal-form-message:focus {
   outline: none;
@@ -844,7 +842,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 0;
-  background-image: url(../images/V-l.svg);
   transition: background-color var(--transition);
  
 
@@ -852,7 +849,7 @@ body {
 
 .modal-form-check:checked + .modal-form-check-desc::before {
   background-color: var(--btn-color);
-  
+  background-image: url(../images/modal-vector.svg);
 }
 
 .modal-form-check:focus + .modal-form-check-desc::before {
@@ -884,4 +881,90 @@ body {
   display: flex;
   align-items: center;
   font-size: 12px;
+  margin-bottom: 24px;
+}
+
+.modal-text-form {
+  display: block;
+  margin-bottom: 16px;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--frequent-color);
+
+}
+
+.footer-mailto {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin-left: 80px;
+}
+
+.footer-mailto-text {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--fond-color);
+}
+
+.footer-mailto-form {
+  display: flex;
+  gap: 24px;
+}
+
+.footer-mailto-input {
+  display: block;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  width: 264px;
+  height: 40px;
+  padding: 8px 16px;
+  box-sizing: border-box;
+  border: 1px solid #ffffff;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: var(--frequent-color);
+  color: var(--fond-color);
+  outline: 2px solid transparent;
+  outline-offset: -2px;
+  transition: outline-color var(--transition);
+}
+
+.footer-mailto-btn {
+  position: relative;
+  display: flex;
+  gap: 16px;
+  min-width: 165px;
+  height: 40px;
+  padding: 8px 64px 8px 24px;
+  border: none;
+  border-radius: 4px;
+  font-family: inherit;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+  align-items: center;
+  background-color: var(--logo-btm-color);
+  color: var(--fond-color);
+  transition: background-color var(--transition);
+}
+
+.footer-mailto-btn:hover,
+.footer-mailto-btn:focus {
+background: var(--btn-color);
+color: var(--fond-color);
+}
+
+.footer-mailto-svg {
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 117px;
+  transform: translateY(-50%);
+  fill: var(--fond-color);
 }
